# models/file.js
@@ -10,7 +10,6 @@ module.exports = (sequelize) => {
        url: Sequelize.STRING,
        date: Sequelize.DATE,
        totalAmount: Sequelize.FLOAT,
-       payedAmount : Sequelize.FLOAT,
        description: Sequelize.TEXT
     })
     return File;
